<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.maje.ejercicio1.SecondActivity">

    <Button
        android:id="@+id/botoncito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/NombrePersona"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginTop="92dp"
        android:text="@string/OKButton" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/botoncito"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:layout_marginTop="124dp"
        android:layout_toLeftOf="@+id/botoncito"
        android:layout_toStartOf="@+id/botoncito"
        android:text="@string/checkbodx" />

    <TextView
        android:id="@+id/NombrePersona"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="33dp"
        android:layout_toLeftOf="@+id/checkBox"
        android:layout_toStartOf="@+id/checkBox"
        android:text="@string/Nombre" />

    <EditText
        android:id="@+id/CPeditText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/botoncito"
        android:layout_alignRight="@+id/botoncito"
        android:layout_below="@+id/checkBox"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:contentDescription="CP"
        android:ems="10"
        android:gravity="center"
        android:inputType="number" />

    <EditText
        android:id="@+id/CalleEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/botoncito"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="calle" />

</RelativeLayout>